--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -1,206 +1,66 @@
     <!-- ******DOCS****** --> 
     <section id="docs" class="docs section">
         <div class="container">
-            
-            <h2 class="title text-center">Participants</h2>  
-            <div class="docs-inner">          
-                <div class="block">
-                    <h3 class="sub-title text-center">Living Atlases</h3>
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    
-                                    <th class="text-center">Institution</th>
-                                    <th class="text-center">GBIF page</th>
-                                    <th >Country</th>
-                                    <th >Language</th>
-                                    <th >Status</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    
-                                    <td><a href="https://www.ala.org.au" target="_blank">Atlas of Living Australia</a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82983/atlas-of-living-australia" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Australia</td>
-                                    <td>English</td>
-                                    <td>In production</td>
-                                <tr>
-                                <tr>
-                                    <td>Canadensys</td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82984/canadensys" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Canada</td>
-                                    <td>English - French</td>
-                                    <td>In progress</td>
-                                <tr>
-                                <tr>
-                                    <td><a href="http://portail.gbif.fr" target="_blank">GBIF France</a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82969/atlas-of-living-france" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>France</td>
-                                    <td>French</td>
-                                    <td>In production</td>
-                                <tr>
-                                <tr>
-                                    <td> <a href="http://datos.gbif.es" target="_blank">GBIF Spain</a></span></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82954/gbifes" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Spain</td>
-                                    <td>Spanish</td>
-                                    <td>In production</td>
-                                <tr>
-                                <tr>
-                                    <td><a href="http://dados.gbif.pt" target="_blank">GBIF Portugal </a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82967/gbifpt" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Portugal</td>
-                                    <td>Portugese</td>
-                                    <td>In production</td>
-                                <tr>  
-                                <tr>
-                                    <td><a href="http://www.crbio.cr/crbio/?page_id=2&lang=es" target="_blank">CRBio</a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82989/crbio-atlas-of-living-costa-rica" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Costa Rica</td>
-                                    <td>Spanish - English</td>
-                                    <td>In production</td>
-                                <tr>
-                                <tr>
-                                    <td><a href="http://datos.sndb.mincyt.gob.ar/" target+"_blank">Sistema Nacional de Datos Biologicos</a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82985/argentina-sistema-nacional-de-datos-biologicos" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Argentina</td>
-                                    <td>Spanish</td>
-                                    <td>In production</td>
-                                <tr> 
-                                <tr>
-                                    <td><a href="https://bioatlas.se" target="_blank">GBIF Sweden</a></td>
-                                    <td class="text-center"></td>
-                                    <td>Sweden</td>
-                                    <td>Swedish - English</td>
-                                    <td>In production</td>
-                                <tr>   
-                                <tr>
-                                    <td><a href="https://nbnatlas.org/" target="_blank">National Biodiversity Network Atlas </a></td>
-                                    <td class="text-center"></td>
-                                    <td>United Kingdom</td>
-                                    <td>English</td>
-                                    <td>In production</td>
-                                <tr> 
-                                <tr>
-                                    <td><a href="https://scotland.nbnatlas.org/" target="_blank">National Biodiversity Network Altas - Scotland </a></td>
-                                    <td class="text-center"><a href="https://www.gbif.org/project/82973/atlas-of-living-scotland" target="_blank"><img class="gbif" src="{{ site.baseurl }}public/css/images/GBIF-2015-mark.png"></a></td>
-                                    <td>Scotland</td>
-                                    <td>English</td>
-                                    <td>In production</td>
-                                <tr> 
-                                <tr>
-                                    <td><a href="https://wales.nbnatlas.org/" target="_blank">National Biodiversity Network Atlas - Wales</a></td>
-                                    <td class="text-center"></td>
-                                    <td>Wales</td>
-                                    <td>English - Welsh</td>
-                                    <td>In production</td>
-                                <tr>  
-                            </tbody>
-                        </table>
+            <h2 class="title text-center">Documentation & Links</h2>
+            <div class="row">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-calendar"></i>
                     </div>
-                </div>
-            </div>      
+                    <div class="content">
+                        <h3 class="sub-title">Past and future events</h3>
+                        <p>The agenda of the community can be found on the <a href="https://www.gbif.org/programme/82953/living-atlases#events" target="_blank">Living Atlases page</a> on the new <a href="https://www.gbif.org">GBIF.org</a> website.  </p>
+                    </div><!--//content-->
+                </div><!--//item-->    
+                <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-code"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title">HipChat Room</h3>
+                        <p>Developers from the entire community can discuss through an <a href="https://www.hipchat.com/gx1ej3K6Q" target="_blank">HipChat Room</a> hosted by Atlas of Living Australia. If you have any issue or any question related to the installation, development or maintenance of ALA modules, here is the place to go! </p>
+                    </div><!--//content-->
+                </div><!--//item-->
+                <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-envelope"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title">ALA Mailing List</h3>
+                        <p>Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical questions.</p>
+                    </div><!--//content-->
+                </div><!--//item-->        
+            </div>
+            <div class="row">  
+                 <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-globe"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title">Internationalization</h3>
+                        <p>Some ALA modules have been translated in several languages using Crowdin platform. Translation has been made in Spanish, Catalan, Basque, French and Portuguese. You can access to the project through the <a href="https://crowdin.com/project/ala-i18n" target="_blank">ALA Crowdin project</a></p>
+                    </div><!--//content-->
+                </div><!--//item--> 
+                <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-book"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title"> ALA Key Technical Document</h3>
+                        <p>This document is a contribution to the Encounter Bay (ALA node portal internationalization) project, co-funded by the French, Spanish, Portuguese and Belgian GBIF Nodes and GBIF Secretariat through its Capacity Enhancement Support Programme.</p>
+                        <p> It is intended to capture the essence of the technical documentation about ALA components necessary for evaluators/adopters to discover, assess, understand, install, configure, customize and operate the tools. </p>
+                        <P> Version: <a href="https://www.gbif.org/document/82847/ala-key-technical-documentation-english" target="_blank">English</a>, <a href="https://www.gbif.org/document/82848/ala-key-technical-documentation-french" target="_blank">French</a>, <a href="https://www.gbif.org/document/82850/ala-key-technical-documentation-portugese" target="_blank">Portugese</a>, <a href="https://www.gbif.org/document/82849/ala-key-technical-documentation-spanish" target="_blank">Spanish</a>.</p> 
+                    </div><!--//content-->
+                </div><!--//item--> 
+                <div class="item col-md-4 col-sm-6 col-xs-12">
+                    <div class="icon-holder">
+                        <i class="fa fa-file-powerpoint-o"></i>
+                    </div>
+                    <div class="content">
+                        <h3 class="sub-title"> Presentations</h3>
+                        <p>The community made presentations during international or national conferences or workshop. We can find all documents on the <a href="https://github.com/AtlasOfLivingAustralia/documentation/wiki/Presentations-ALA-project" target="_blank">Atlas of Living Australia GitHub</a> account.</p>
+                    </div><!--//content-->
+                </div><!--//item-->             
+            </div><!--//row-->            
         </div><!--//container-->
-        <div class="container">
-            <h2 class="title text-center"></h2>  
-            <div class="docs-inner">          
-            <div class="block">
-                <h3 class="sub-title text-center">The community in action...</h3>
-
-                <div id="community-action" class="carousel slide" data-ride="carousel">
-                  <!-- Indicators -->
-                  <ol class="carousel-indicators">
-                    <li data-target="#community-action" data-slide-to="0" class="active"></li>
-                    <li data-target="#community-action" data-slide-to="1"></li>
-                    <li data-target="#community-action" data-slide-to="2"></li>
-                    <li data-target="#community-action" data-slide-to="3"></li>
-                    <li data-target="#community-action" data-slide-to="4"></li>
-                    <li data-target="#community-action" data-slide-to="5"></li>
-                    <li data-target="#community-action" data-slide-to="6"></li>
-                    <li data-target="#community-action" data-slide-to="7"></li><!-- 
-                    <li data-target="#community-action" data-slide-to="8"></li>
-                    <li data-target="#community-action" data-slide-to="9"></li> -->
-                  </ol>
-
-                  <!-- Wrapper for slides -->
-                  <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, , GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_3.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid,  <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_5.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_7.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/enm_2016_1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        European Node Meeting 2016 - Stockholm, Sweden <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/enm_2016_2.jpg" alt="...">
-                      <div class="carousel-caption">
-                        European Node Meeting 2016 - Stockholm, Sweden <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/international-ala-workshop-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        International ALA workshop 2016 - Madrid, Spain <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <!-- <div class="item">
-                      <img src="{{ site.baseurl }}public/images/tdwg-2016-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        TDWG 2016 - Santa Clara de San Jose, Costa Rica <br />
-                        Photo by Fabien Caviere, GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/international-ala-workshop-2015-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        International ALA workshop 2015 - Paris, France <br />
-                        Photo by Sophie Pamerlon, GBIF France
-                      </div>
-                    </div> -->
-                  </div>
-
-                  <!-- Controls -->
-                  <a class="left carousel-control" href="#community-action" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="right carousel-control" href="#community-action" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-                </div>
-            </div>       
-        </div><!--//container-->
-    </section><!--//docs->
+    </section><!--//Docs-->
