--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -1,5 +1,5 @@
-    <!-- ******ABOUT****** --> 
-    <section id="about" class="about section">
+    <!-- ******MODULES****** --> 
+    <section id="modules" class="modules section">
         <div class="container">
             <h2 class="title text-center">Highlighted modules</h2>
             <p class="intro text-center">Atlas of Living Australia platform is composed of many modules but the community works mainly with these six ones. It means that other members are currently installing them and can help you to configure it or answer any question you can have. You can s them separatly. You don't need to install all the modules but some of them won't fully work with linked modules. </p>
@@ -62,4 +62,4 @@
                 </div><!--//item-->               
             </div><!--//row-->            
         </div><!--//container-->
-    </section><!--//about-->
+    </section><!--//modules-->
