--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,11 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 {% include head.html %}
 <body data-spy="scroll">
-{% include facebook.html %}
 {% include header.html %}
 {% include promo.html %}
-{% include about.html %}
-{% include features.html %}
+{% include modules.html %}
 {% include docs.html %}
+{% include participants.html %}
 {% include contact.html %}
 {% include footer.html %}
 </body>
