carousel fixed size + readme

--- a/_includes/participants.html
+++ b/_includes/participants.html
@@ -126,49 +126,49 @@
 
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
-                    <div class="item active">
+                    <div class="item active fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/madrid_2015_1.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
                         Photo by Marie-Elise Lecoq, , GBIF France
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/madrid_2015_3.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid,  <br />
                         Photo by Marie-Elise Lecoq, GBIF France
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/madrid_2015_5.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
                         Photo by Marie-Elise Lecoq, GBIF France
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/madrid_2015_7.jpg" alt="...">
                       <div class="carousel-caption">
                         Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
                         Photo by Marie-Elise Lecoq, GBIF France
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/enm_2016_1.jpg" alt="...">
                       <div class="carousel-caption">
                         European Node Meeting 2016 - Stockholm, Sweden <br />
                         Photo by GBIF Spain
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/enm_2016_2.jpg" alt="...">
                       <div class="carousel-caption">
                         European Node Meeting 2016 - Stockholm, Sweden <br />
                         Photo by GBIF Spain
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item fixed-carrousel">
                       <img src="{{ site.baseurl }}public/images/international-ala-workshop-1.jpg" alt="...">
                       <div class="carousel-caption">
                         International ALA workshop 2016 - Madrid, Spain <br />
