--- a/_includes/participants.html
+++ b/_includes/participants.html
@@ -57,83 +57,34 @@
                 <div id="community-action" class="carousel slide" data-ride="carousel">
                   <!-- Indicators -->
                   <ol class="carousel-indicators">
-                    <li data-target="#community-action" data-slide-to="0" class="active"></li>
-                    <li data-target="#community-action" data-slide-to="1"></li>
-                    <li data-target="#community-action" data-slide-to="2"></li>
-                    <li data-target="#community-action" data-slide-to="3"></li>
-                    <li data-target="#community-action" data-slide-to="4"></li>
-                    <li data-target="#community-action" data-slide-to="5"></li>
-                    <li data-target="#community-action" data-slide-to="6"></li>
-                    <li data-target="#community-action" data-slide-to="7"></li><!-- 
-                    <li data-target="#community-action" data-slide-to="8"></li>
-                    <li data-target="#community-action" data-slide-to="9"></li> -->
+                    {% for photo in site.data.carousel %}
+                        {% if photo.active == true %}
+                            <li data-target="#community-action" data-slide-to="{{ photo.id }}" class="active"></li>
+                        {% elsif photo.active == false %}
+                            <li data-target="#community-action" data-slide-to="{{ photo.id }}"></li>
+                        {% endif %}
+                    {% endfor %}
                   </ol>
 
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner" role="listbox">
-                    <div class="item active fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, , GBIF France
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_3.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid,  <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_5.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/madrid_2015_7.jpg" alt="...">
-                      <div class="carousel-caption">
-                        Atlas of Living Australia workshop 2015 - Madrid, Spain <br />
-                        Photo by Marie-Elise Lecoq, GBIF France
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/enm_2016_1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        European Node Meeting 2016 - Stockholm, Sweden <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/enm_2016_2.jpg" alt="...">
-                      <div class="carousel-caption">
-                        European Node Meeting 2016 - Stockholm, Sweden <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <div class="item fixed-carrousel">
-                      <img src="{{ site.baseurl }}public/images/international-ala-workshop-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        International ALA workshop 2016 - Madrid, Spain <br />
-                        Photo by GBIF Spain
-                      </div>
-                    </div>
-                    <!-- <div class="item">
-                      <img src="{{ site.baseurl }}public/images/tdwg-2016-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        TDWG 2016 - Santa Clara de San Jose, Costa Rica <br />
-                        Photo by Fabien Caviere, GBIF France
-                      </div>
-                    </div>
-                    <div class="item">
-                      <img src="{{ site.baseurl }}public/images/international-ala-workshop-2015-1.jpg" alt="...">
-                      <div class="carousel-caption">
-                        International ALA workshop 2015 - Paris, France <br />
-                        Photo by Sophie Pamerlon, GBIF France
-                      </div>
-                    </div> -->
+                     {% for photo in site.data.carousel %}
+                        {% if photo.active == true %}
+                            <div class="item active fixed-carrousel">
+                                <img src="{{ site.baseurl }}public/images/{{ photo.image_name }}" alt="...">
+                                <div class="carousel-caption">
+                                    {{ photo.caption }}
+                                </div>
+                            </div>
+                        {% elsif photo.active == false %}
+                            <div class="item fixed-carrousel">
+                                <img src="{{ site.baseurl }}public/images/{{ photo.image_name }}" alt="...">
+                                <div class="carousel-caption">
+                                    {{ photo.caption }}
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                   </div>
 
                   <!-- Controls -->
