presentations page + events page

--- a/_includes/modules.html
+++ b/_includes/modules.html
@@ -15,13 +15,13 @@
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
-                        <i class="fa fa-database"></i>
+                        <i class="fa fa-envelope"></i>
                     </div>
                     <div class="content">
-                        <h3 class="sub-title">Biocache-store</h3>
-                        <p>Command-Line Interface tool for managing occurrence records</p>
+                        <h3 class="sub-title">ALA Mailing List</h3>
+                        <p>Suscribe to the <a href="https://lists.gbif.org/mailman/listinfo/ala-portal" traget="_blank">ALA-Portal mailing list</a> where you will be able to ask any technical or non technical questions.</p>
                     </div><!--//content-->
-                </div><!--//item-->
+                </div><!--//item-->   
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div class="icon-holder">
                         <i class="fa fa-search"></i>
