--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
     <header id="header" class="header">
         <div class="container">
             <h1 class="logo pull-left">
-                <a class="scrollto" href="#promo">
-                    <span class="logo-title">{{ site.title }}</span>
+                <a href="{{ site.url }}">
+                    <span class="logo-title">{{ site.title }}</span> 
+
                 </a>
             </h1><!--//logo-->
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
@@ -20,7 +21,12 @@
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
                         {% for widget in site.widgets %}
                         <li class="nav-item"> 
-                            {% if widget.archor %} <a class="scrollto" href="#{{ widget.url }}"> {% else %}<a href="{{ widget.url }}">{% endif %} {{ widget.title }}</a></li>
+                            {% if widget.page == page.title %} 
+                                <a class="scrollto" href="#{{ widget.archor }}"> 
+                            {% else %}
+                                <a href="{{ widget.url }}">
+                            {% endif %} 
+                                {{ widget.title }}</a></li>
                         {% endfor %}
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
