--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -5,10 +5,7 @@
 {% include head.html %}
 <body data-spy="scroll">
 {% include header.html %}
-{% include promo.html %}
-{% include intro.html %}
-{% include docs.html %}
-{% include participants.html %}
+{% include event.html %}
 {% include contact.html %}
 {% include footer.html %}
 </body>
